[workspace]
resolver = "3"
members = [
    "crates/quantlib",
    "crates/quantlib-core",
    "crates/quantlib-math",
    "crates/quantlib-market",
    "crates/quantlib-instruments",
    "crates/quantlib-pricing",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
authors = ["Laercio Simoes"]
repository = "https://github.com/your-org/quantlib-rs"

[workspace.dependencies]
chrono = "0.4"
rust_decimal = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
tracing = "0.1"
approx = "0.5"